--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,12 @@
 [workspace]
 resolver = "2"
-members = ["backend", "desktop", "frontend", "ml"]
+members = ["backend", "desktop", "frontend", "ml", "ml-cmd"]
+
+[workspace.dependencies]
+tokio = { version = "1.42.0", features = ["full"]}
+serde = { version = "1.0.219", features = ["derive"] }
+log = "0.4.27"
+anyhow = "1.0.98"
 
 [profile.dev]
 debug = true
