--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -1,12 +1,11 @@
 [package]
 name = "backend"
-edition = "2024"
+edition = "2021"
 
 [dependencies]
-axum = { version = "0.8", features = ["macros", "json"] }
-tokio = { version = "1", features = ["full"] }
-serde = { version = "1", features = ["derive"] }
-serde_json = "1.0"
-tower = "0.5.2"
-ml = { path = "../ml" }
-log = "0.4.27"
+tokio = { workspace = true }
+serde = { workspace = true }
+log = { workspace = true }
+axum = { version = "0.8", features = ["macros", "json", "multipart"] }
+uuid = { version = "1", features = ["v4"] }
+tower-http = { version = "0.6.4", features = ["cors", "trace"] }
