--- a/frontend/Cargo.toml
+++ b/frontend/Cargo.toml
@@ -1,11 +1,15 @@
 [package]
 name = "frontend"
 version = "0.1.0"
-edition = "2024"
+edition = "2021"
 
 [dependencies]
+log = { workspace = true }
 ml = { path = "../ml" }
 yew = { version = "0.21", features = ["csr"] }
 web-sys = { version = "0.3", features = ["HtmlCanvasElement", "WebGl2RenderingContext", "MouseEvent"] }
+wasm-bindgen-futures = "0.4.50"
+serde_json = "1.0.140"
+reqwest = { version = "0.12.15", features = ["json"] }
 
 [features]
