--- a/ml/Cargo.toml
+++ b/ml/Cargo.toml
@@ -1,11 +1,10 @@
 [package]
 name = "ml"
 version = "0.1.0"
-edition = "2024"
+edition = "2021"
 
 [dependencies]
 burn = { version = "0.17.0", features = ["wgpu", "autodiff"] }
-tokio = { version = "1.42.0", features = ["full"]}
-serde = { version = "1.0.219", features = ["default"] }
+tokio = { workspace = true }
 zip = "3.0.0"
 glam = "0.30.3"
