--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -7,5 +7,5 @@ tokio = { workspace = true }
 serde = { workspace = true }
 log = { workspace = true }
 axum = { version = "0.8", features = ["macros", "json", "multipart"] }
-uuid = { version = "1", features = ["v4"] }
+uuid = { version = "1", features = ["v4", "js"] }
 tower-http = { version = "0.6.4", features = ["cors", "trace"] }
