--- a/frontend/Cargo.toml
+++ b/frontend/Cargo.toml
@@ -5,11 +5,18 @@ edition = "2021"
 
 [dependencies]
 log = { workspace = true }
-ml = { path = "../ml" }
 yew = { version = "0.21", features = ["csr"] }
-web-sys = { version = "0.3", features = ["HtmlCanvasElement", "WebGl2RenderingContext", "MouseEvent"] }
+web-sys = { version = "0.3", features = [
+    "HtmlCanvasElement",
+    "Window",
+    "Document",
+    "Element",
+    "HtmlElement",
+    "console"
+] }
 wasm-bindgen-futures = "0.4.50"
-serde_json = "1.0.140"
-reqwest = { version = "0.12.15", features = ["json"] }
+wasm-bindgen = "0.2.100"
+wgpu = {version = "25.0.0", features = ["webgl", "wgsl", "webgpu"]}
+gloo = "0.11.0"
 
 [features]
