--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -3,13 +3,12 @@ FROM rustlang/rust:nightly AS builder
 WORKDIR /app
 
 RUN rustup target add wasm32-unknown-unknown
-RUN cargo install trunk
+RUN cargo install trunk wasm-bindgen-cli
 
-COPY . .
+COPY frontend ./frontend
+WORKDIR /app/frontend
 
 RUN trunk build --release
 
-# Serve static files
 FROM nginx:alpine
-
-COPY --from=builder /app/dist /usr/share/nginx/html
+COPY --from=builder /app/frontend/dist /usr/share/nginx/html
