--- a/frontend/Trunk.toml
+++ b/frontend/Trunk.toml
@@ -2,5 +2,6 @@
 target = "index.html"
 dist = "dist"
 
-[proxy]
-backend = "http://localhost:3000"
+[[proxy]]
+rewrite = "/api/"
+backend = "http://0.0.0.0:3000"
