--- a/ml/Cargo.toml
+++ b/ml/Cargo.toml
@@ -6,5 +6,5 @@ edition = "2021"
 [dependencies]
 burn = { version = "0.17.0", features = ["wgpu", "autodiff"] }
 tokio = { workspace = true }
-zip = "3.0.0"
+zip = { version = "3.0.0", features = ["deflate"] }
 glam = "0.30.3"
