--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -3,9 +3,13 @@ name = "backend"
 edition = "2021"
 
 [dependencies]
+ml = { path = "../ml" }
 tokio = { workspace = true }
 serde = { workspace = true }
 log = { workspace = true }
+zip = { workspace = true }
+anyhow = { workspace = true }
+thiserror = { workspace = true }
 axum = { version = "0.8", features = ["macros", "json", "multipart"] }
-uuid = { version = "1", features = ["v4", "js"] }
+uuid = { version = "1", features = ["v4", "js", "serde"] }
 tower-http = { version = "0.6.4", features = ["cors", "trace"] }
