--- a/frontend/Cargo.toml
+++ b/frontend/Cargo.toml
@@ -12,10 +12,15 @@ web-sys = { version = "0.3", features = [
     "Document",
     "Element",
     "HtmlElement",
-    "console"
+    "console",
+    "Request",
+    "RequestInit",
+    "FormData",
+    "Blob"
 ] }
 wasm-bindgen-futures = "0.4.50"
 wasm-bindgen = "0.2.100"
+wasm-logger = "0.2.0"
 wgpu = {version = "25.0.0", features = ["webgl", "wgsl", "webgpu"]}
 gloo = "0.11.0"
 
