--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,12 +3,17 @@ resolver = "2"
 members = ["backend", "desktop/src-tauri", "frontend", "ml"]
 
 [workspace.dependencies]
-tokio = { version = "1.42.0", features = ["full"]}
+bytemuck = { version = "1.23.0", features = ["derive"] }
+glam = { version = "0.30.3", features = ["serde"]}
+tokio = { version = "1.45.0", features = ["full"]}
 serde = { version = "1.0.219", features = ["derive"] }
 zip = { version = "4.0.0", default-features = false, features = ["deflate"] }
+tracing = "0.1"
+tracing-subscriber = "0.3"
 log = "0.4.27"
 anyhow = "1.0.98"
 thiserror = "2.0.12"
+uuid = { version = "1", features = ["v4", "js", "serde"] }
 
 [profile.dev]
 debug = true
