--- a/frontend/Cargo.toml
+++ b/frontend/Cargo.toml
@@ -4,10 +4,15 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-log = { workspace = true }
+bytemuck = { workspace = true }
+glam = { workspace = true }
+serde = { workspace = true }
+uuid = { workspace = true }
 yew = { version = "0.21", features = ["csr"] }
-web-sys = { version = "0.3", features = [
+yew-router = "0.18.0"
+web-sys = { version = "0.3.77", features = [
     "HtmlCanvasElement",
+    "HtmlSelectElement",
     "Window",
     "Document",
     "Element",
@@ -23,5 +28,8 @@ wasm-bindgen = "0.2.100"
 wasm-logger = "0.2.0"
 wgpu = {version = "25.0.0", features = ["webgl", "wgsl", "webgpu"]}
 gloo = "0.11.0"
+gloo-console = "0.3.0"
+gloo-file = "0.3.0"
+gloo-net = "0.6.0"
 
 [features]
