--- a/frontend/Cargo.toml
+++ b/frontend/Cargo.toml
@@ -8,6 +8,8 @@ bytemuck = { workspace = true }
 glam = { workspace = true }
 serde = { workspace = true }
 uuid = { workspace = true }
+wgpu = { workspace = true }
+stylist = { version = "0.13.0", features = ["yew_integration"]}
 yew = { version = "0.21", features = ["csr"] }
 yew-router = "0.18.0"
 web-sys = { version = "0.3.77", features = [
@@ -26,7 +28,6 @@ web-sys = { version = "0.3.77", features = [
 wasm-bindgen-futures = "0.4.50"
 wasm-bindgen = "0.2.100"
 wasm-logger = "0.2.0"
-wgpu = {version = "25.0.0", features = ["webgl", "wgsl", "webgpu"]}
 gloo = "0.11.0"
 gloo-console = "0.3.0"
 gloo-file = "0.3.0"
