--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,5 @@
 target/
 .idea/
-assets/roms/
 frontend/dist/
 frontend/node_modules/
-frontend/styles/output.css
-
-Cargo.lock
+frontend/output.css
