--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -5,7 +5,7 @@ version = "0.1.0"
 
 [dependencies]
 bytemuck = { workspace = true }
-ml = { path = "../ml" }
+ml = { path = "../train" }
 tokio = { workspace = true }
 serde = { workspace = true }
 zip = { workspace = true }
