--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,18 +4,20 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "tailwindcss -i ./styles/input.css -o ./styles/output.css --watch",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build:tailwind": "mkdirp dist && tailwindcss -c tailwind.config.ts -o output.css --minify"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/node": "^22.15.21",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.3",
-    "tailwindcss": "^4.1.7"
+    "tailwindcss": "^4.1.7",
+    "typescript": "^5.8.3"
   },
   "dependencies": {
-    "@tailwindcss/cli": "^4.1.7"
+    "@tailwindcss/cli": "^4.1.7",
+    "mkdirp": "^3.0.1"
   }
 }
