--- a/viewer/Cargo.toml
+++ b/viewer/Cargo.toml
@@ -1,7 +1,8 @@
 [package]
-name = "renderer"
+name = "viewer"
 version = "0.1.0"
 edition = "2024"
 
 [dependencies]
 glam = { workspace = true }
+wgpu = { workspace = true }
