--- a/web-cmn/Cargo.toml
+++ b/web-cmn/Cargo.toml
@@ -1,9 +1,8 @@
 [package]
-name = "scene"
+name = "web-cmn"
 version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-glam = { workspace = true }
 serde = { workspace = true }
-tokio = { workspace = true }
+uuid = { workspace = true }
