--- a/renderer/Cargo.toml
+++ b/renderer/Cargo.toml
@@ -4,3 +4,7 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+burn = { workspace = true }
+burn-fusion = { workspace = true }
+glam = { workspace = true }
+ball-tree = "0.5.1"
