--- a/train/Cargo.toml
+++ b/train/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+burn = { workspace = true }
 glam = { workspace = true }
 serde = { workspace = true }
-burn = { version = "0.17.0", features = ["wgpu", "autodiff"] }
 tokio = { workspace = true }
