--- a/train/Cargo.toml
+++ b/train/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 burn = { workspace = true }
+burn-wgpu = { workspace = true }
 glam = { workspace = true }
 serde = { workspace = true }
 tokio = { workspace = true }
