--- a/frontend/Cargo.toml
+++ b/frontend/Cargo.toml
@@ -7,14 +7,17 @@ build = "build.rs"
 [dependencies]
 viewer = { path = "../viewer" }
 web-cmn = { path = "../web-cmn" }
-futures-util = "0.3.31"
-stylist = { version = "0.13.0", features = ["yew_integration"]}
+glam.workspace = true
 serde = { workspace = true }
 serde_json = { workspace = true }
 thiserror.workspace = true
+futures-util = "0.3.31"
+stylist = { version = "0.13.0", features = ["yew_integration"]}
 yew = { version = "0.21", features = ["csr"] }
 yew-router = "0.18.0"
 web-sys = { workspace = true, features = [
+    "KeyboardEvent",
+    "MouseEvent",
     "HtmlCanvasElement",
     "HtmlSelectElement",
     "Window",
@@ -32,6 +35,7 @@ wasm-bindgen = "0.2.100"
 wasm-logger = "0.2.0"
 gloo = "0.11.0"
 gloo-console = "0.3.0"
+gloo-events = "0.2.0"
 gloo-file = "0.3.0"
 gloo-net = { version = "0.6.0", features = ["websocket"] }
 
