--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,7 +27,12 @@ burn-fusion = { git = "https://github.com/tracel-ai/burn" }
 bytemuck = { version = "1.23.0", features = ["derive"] }
 glam = { version = "0.30.3", features = ["serde"]}
 hashbrown = "0.15"
-image = "0.25.6"
+image = { version = "0.25", default-features = false, features = [
+    'png',
+    'webp',
+    "jpeg",
+    "hdr"
+] }
 log = "0.4.27"
 miette = { version = "7.6.0", features = ["fancy"] }
 naga = { version = "24.0.0", default-features = false}
