--- a/web-cmn/Cargo.toml
+++ b/web-cmn/Cargo.toml
@@ -1,7 +1,9 @@
 [package]
 name = "web-cmn"
-version = "0.1.0"
-edition = "2024"
+edition.workspace = true
+version.workspace = true
+readme.workspace = true
+license.workspace = true
 
 [dependencies]
 serde = { workspace = true }
