--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [workspace]
 resolver = "2"
-members = [ "backend", "dataset", "db", "frontend", "kernel", "pipeline", "prefix-sum", "render", "render-bwd", "scene-source", "train", "viewer", "web-cmn", "wgsl"]
+members = [ "backend", "dataset", "db", "frontend", "kernel", "pipeline", "prefix-sum", "render", "render-bwd", "scene-source", "train", "websplat", "web-cmn", "wgsl" ]
 
 [workspace.package]
 edition = "2024"
@@ -26,6 +26,7 @@ burn-wgpu = { git = "https://github.com/tracel-ai/burn", features = [
 burn-fusion = { git = "https://github.com/tracel-ai/burn" }
 bytemuck = { version = "1.23.0", features = ["derive"] }
 glam = { version = "0.30.3", features = ["serde"]}
+gloo-console = "0.3.0"
 hashbrown = "0.15"
 image = { version = "0.25", default-features = false, features = [
     'png',
@@ -35,7 +36,7 @@ image = { version = "0.25", default-features = false, features = [
 ] }
 log = "0.4.27"
 miette = { version = "7.6.0", features = ["fancy"] }
-naga = { version = "24.0.0", default-features = false}
+naga = { version = "26", features = ["wgsl-in", "wgsl-out", "termcolor"] }
 naga_oil = { git = "https://github.com/bevyengine/naga_oil", default-features = false }
 path-clean = "1.0.1"
 rand = "0.9.1"
