--- a/prefix-sum/Cargo.toml
+++ b/prefix-sum/Cargo.toml
@@ -10,8 +10,8 @@ kernel.path = "../kernel"
 burn.workspace = true
 burn-wgpu.workspace = true
 burn-cubecl.workspace = true
+naga.workspace = true
 naga_oil.workspace = true
-wgpu.workspace = true
 
 [build-dependencies]
 wgsl.path = "../wgsl"
