--- a/render-bwd/Cargo.toml
+++ b/render-bwd/Cargo.toml
@@ -14,6 +14,7 @@ burn-cubecl.workspace = true
 burn-fusion.workspace = true
 burn-ir.workspace = true
 
+naga.workspace = true
 naga_oil.workspace = true
 wgpu.workspace = true
 bytemuck.workspace = true
