--- a/render/Cargo.toml
+++ b/render/Cargo.toml
@@ -14,6 +14,7 @@ burn-ir.workspace = true
 burn-wgpu.workspace = true
 bytemuck.workspace = true
 glam = { workspace = true }
+naga.workspace = true
 naga_oil.workspace = true
 rand.workspace = true
 tracing.workspace = true
