--- a/sort/Cargo.toml
+++ b/sort/Cargo.toml
@@ -11,9 +11,9 @@ burn.workspace = true
 burn-wgpu.workspace = true
 burn-cubecl.workspace = true
 tracing.workspace = true
+naga.workspace = true
 naga_oil.workspace = true
 bytemuck.workspace = true
-wgpu.workspace = true
 
 [dev-dependencies]
 rand.workspace = true
