--- a/wgsl/Cargo.toml
+++ b/wgsl/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+naga.workspace = true
 naga_oil.workspace = true
 anyhow.workspace = true
 regex = "1.11.1"
@@ -11,7 +12,6 @@ regex-syntax = "0.8.5"
 data-encoding = "2.6.0"
 pathdiff = "0.2.3"
 thiserror.workspace = true
-wgpu.workspace = true
 
 [lints]
 workspace = true
