--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2024"
 version = "0.1.0"
 readme = "README.md"
 license = "Apache-2.0"
-repository = "https://github.com/swaggimus-grime/goonr"
+repository = "https://github.com/swaggimus-grime/ggs"
 
 [workspace.dependencies]
 anyhow = "1.0.98"
